# imap-data-access

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: api_demo.ipynb
imap_data_access/: __init__.py  cli.py  file_naming.py  file_validation.py  io.py  processing_input.py  processing_input_file.py  temp_example.py  webpoda.py
tests/: conftest.py  test_file_validation.py  test_io.py  test_processing_input.py  test_webpoda.py
