[tool.poetry]
name = "imap-data-access"
version = "0.2.0"
description = "IMAP SDC Data Access"
authors = ["IMAP SDC Developers <imap-sdc@lists.lasp.colorado.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
addopts = "-ra"
markers = [
    "network: Test that requires network access",
]
filterwarnings = [
    "ignore::DeprecationWarning:importlib*",
    "ignore::DeprecationWarning:jsii*",
]
norecursedirs = ["tests/test-data"]